<resources>
    <string name="app_name">UCount</string>
    <string name="idtxthint">用户名/手机号</string>
    <string name="pwdtxthint">密码</string>
    <string name="loginbtntext">登录</string>
    <string name="forgot_pwd">忘记密码？</string>
    <string name="no_username">没有账号？</string>
    <string name="loading">正在登录</string>

    <string name="menu_asset">资产</string>
    <string name="menu_money">理财</string>
    <string name="menu_plan">规划</string>
    <string name="menu_report">报表</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="report_intros1">
        收入说明：

        1.“工资收入”包括校内勤工俭学、校内工作补贴和兼职工资等多项劳动性收入，体现用户的个
        人劳动所得。
        2.“理财收入”作为衡量用户使用理财产品或通过理财工具获得收入的能力的重
        要判断要素。
        3.“家庭补助”多为来自家长的生活费补贴。
        4.其他收入考虑到了大学生额外收入的情况，展现了大学生的主要收入来源情况。
    </string>
    <string name="report_intros2">
        支出说明：
        1.所有账目计入账单后及时分路，归入不同支出项目；系统无法识别支出项目的，将由用
        户手动选择支出标签，以实现实时分路记帐，明确支出项目。
        2.设置的“校内消费”、“社交消费”、“恋爱消费”、“形象消费”、“兴趣消费”等指标类选
        项消费由用户手动标签分类，以监控用户资金流向，管理个人支出情况。
    </string>
    <string name="report_intros3">
        表格说明：
        1、净值＝资产－负债。
        “净值”是衡量所有者当前资产的重要指标。通过对流动净值、投资净值和自用净值的加总，
        我们可以对大学生的资产和负债情况进行评估。总资产说明了用户的初始资产总量，总负
        债说明了用户的所承担债务。
        2、自用项目说明：
        自用贷款：为了购买自用资产而进行的借贷；
        自用性资产：指手机、电脑、相机等个人购买后目的为自用的资产，当使用目的转换为出
        售，则在售出后按照款项存储方式，归入现金/活存。

    </string>
    <string name="report_intros4">
        专业的资产负债表（the Balance Sheet)亦称财务状况表，表示用户在一定日期（通常
        为各会计期末）的财务状况（即资产、负债和业主权益的状况）的主要会计报表，其作用
        是展现个人的基础资产和债权结构，据以解释、评价和预测用户的长期偿债能力和资本结
        构，解释、评价和预测用户的财务弹性。系统内资产负债表的设定符合会计准则。
    </string>


</resources>
