<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/tab_menu"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true">

                <TextView
                    android:id="@+id/txt_asset"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="3dp"
                    android:background="@drawable/tab_menu_bg"
                    android:drawablePadding="3dp"
                    android:drawableTop="@drawable/tab_menu_asset"
                    android:gravity="center"
                    android:textColor="@drawable/tab_menu_asset_text"
                    android:text="@string/menu_asset"/>

                <TextView
                    android:id="@+id/txt_report"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="3dp"
                    android:background="@drawable/tab_menu_bg"
                    android:drawablePadding="3dp"
                    android:drawableTop="@drawable/tab_menu_report"
                    android:gravity="center"
                    android:textColor="@drawable/tab_menu_report_text"
                    android:text="@string/menu_report"/>

                <TextView
                    android:id="@+id/txt_plan"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="3dp"
                    android:background="@drawable/tab_menu_bg"
                    android:drawablePadding="3dp"
                    android:drawableTop="@drawable/tab_menu_plan"
                    android:gravity="center"
                    android:textColor="@drawable/tab_menu_plan_text"
                    android:text="@string/menu_plan"/>

                <TextView
                    android:id="@+id/txt_money"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="3dp"
                    android:background="@drawable/tab_menu_bg"
                    android:drawablePadding="3dp"
                    android:drawableTop="@drawable/tab_menu_money"
                    android:gravity="center"
                    android:textColor="@drawable/tab_menu_money_text"
                    android:text="@string/menu_money"/>

                </LinearLayout>

            <View
                android:id="@+id/div_tab_bar"
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/text_gray"
                android:layout_above="@id/tab_menu"/>

            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/tab_menu"
                android:background="@color/transparent"></FrameLayout>
        </RelativeLayout>
    </FrameLayout>
    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view. -->
    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="left"
        android:background="#fff"
        >
        <TextView
            android:id="@+id/profile_txt_useranme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="用户名"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/profile_txt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="修改密码"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/profile_txt_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="我的帖子"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/profile_txt_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="我的收藏"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/profile_txt_remark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="我的评论"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/profile_txt_praise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="我的赞"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/profile_txt_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="我的消息"
            android:textSize="20sp"
            />
        <Button
            android:id="@+id/quit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="退出当前账号"/>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>